# Mono-Canvas

./: CMakeLists.txt  README.md
AO/Abstraction/: CMakeLists.txt
AO/Abstraction/cmake/: GDrive.cmake.in
AO/Abstraction/include/: Abstraction.h  Common.h  Model3D.h
AO/Abstraction/revision/: AssimpModel.cpp  CrossContext.cpp  Model3D.cpp  Prime.cpp  ProcessData.cpp
AO/Abstraction/shaders/: Viewer3D.vert
AO/Abstraction/src/: LoadTextures.cpp  Model3D.cpp  NoBlocks.cpp  Prime.cpp
AO/AdvScene/: CMakeLists.txt
AO/AdvScene/comp/: BumpGrid.cpp  Sphere.cpp
AO/AdvScene/geometry/: BumpGrid.cpp  GL4_BumpGrid.cpp  GL4_BumpLine.cpp  GL4_DataSet.cpp  GL4_Dots.cpp  GL4_RigidLine.cpp  GL4_RigidPath.cpp
AO/AdvScene/include/: CompositeGeo.h  Geometry.h  ManualSets.h  Pipeline.h  PipelineCtrl.h  Scene.h  Utility.h
AO/AdvScene/loaders/: LoadData.cpp
AO/AdvScene/main/: BevelGround.cpp  BevelPath.cpp  CollisionTest.cpp  Hills.cpp  LoopTimed.cpp  MidPoints.cpp  Two.cpp
AO/AdvScene/pipeline/: GLSL_Flatscape.cpp  HeightRange.cpp  Idle.cpp
AO/AdvScene/scene/: Collision.cpp  PlaneCollision.cpp
AO/AdvScene/shaders/: Flatscape.frag  Flatscape.vert  HeightRange.frag  HeightRange.vert  Idle.frag  Idle.vert  Locked.frag  Locked.vert
AO/AdvScene/utility/: Compute.cpp
AO/Dimentions/: CMakeLists.txt
AO/Dimentions/Prime/: Prime-A.cpp  Prime-B.cpp  Prime-C.cpp
AO/Dimentions/Reserve/: Reserve-A.cpp  Reserve-B.cpp
AO/Dimentions/Shaders/: A1.frag  A1.vert  B1.frag  B1.vert
AO/Flat2D/: CMakeLists.txt  Demo2D.cpp
AO/Flat2D/feed/: GL4-BufferFeeder.cpp
AO/Flat2D/include/: Loaders.h
AO/Flat2D/loaders/: LoadShaders.cpp
AO/Going3D/: CMakeLists.txt
AO/Going3D/cmake/: GDrive.cmake  GDrive.cmake.in
AO/Going3D/comp/: Geometry.cpp  LoadTextures.cpp  Model3D.cpp  ShaderCtrl.cpp  Sphere.cpp  SphereAo.cpp
AO/Going3D/include/: Assimp.h  Common.h  Lh-Assimp.h  LoadShaders.h  Pipeline.h  ShaderCtrl.h  Sphere.h
AO/Going3D/loaders/: LoadData.cpp
AO/Going3D/main/: AssimpModels.cpp  FirstPerson.cpp  FluidCamera.cpp  Globe.cpp  GlobeFigures.cpp  PlanetSys.cpp  PlanetSystem.cpp  Terrain.cpp  Textureless.cpp
AO/Going3D/pipeline/: CamFlash.cpp  LitEnv.cpp  NoBlocks.cpp  Sphere.cpp
AO/Going3D/shaders/: AO-5.vert  AO-7.frag  AO-8.vert  AmbientLight.frag  CamFlash.frag  CamFlash.vert  Lh-assimp.vert  LightSpace.vert  Line.frag  Line.vert  LitBlocks.frag  LitEnv.frag  LitEnv.vert  ModelStatic.frag  ModelStatic.vert  NoBlocks.frag  NoBlocks.vert  OriginalDiffuse.frag  SimpleDiffuse.frag  SimpleDiffuse.vert  Sphere.frag  Sphere.vert  V-Instanced.frag  V-Instanced.vert  Viewer3D.frag  Viewer3D.vert
AO/Going3D/src/: Lh-Model3D.cpp  LoadShaders.cpp  LoadTextures.cpp  Mesh.cpp  Model3D.cpp  Prime-B.cpp  Prime-C.cpp  Prime-D.cpp  Prime-E.cpp  Prime-F.cpp  Prime-G.cpp  Prime-H.cpp  Prime-I.cpp  Prime-J.cpp  Prime-K.cpp  Prime-M.cpp  Prime-N.cpp  Prime.cpp  ShaderCtrl.cpp  SimpleDiffuse.cpp
AO/Learning/: CMakeLists.txt
AO/Learning/include/: Common.h  LoadTextures.h
AO/Learning/shaders/: AO-2.vert  AO-3.frag  AO-3.frag.autosave  AO-3.vert.autosave  AO-4.vert  AO-4.vert.autosave  Mono1.vert
AO/Learning/src/: LoadShaders.cpp  LoadTextures.cpp  Prime-Texturize.cpp  Prime-Transform.cpp  Prime.cpp
AO/MonoCanvas/: CMakeLists.txt
AO/MonoCanvas/shaders/: AO-2.frag  AO-2.vert  AO-3.frag  AO-3.vert  AO-4.frag  AO-4.vert  AO-5.frag  AO-5.vert  AO-6.frag  AO-6.vert  AO-7.vert  AO-8.frag  AO-8.vert  Viewer3D.frag  Viewer3D.vert
AO/MonoCanvas/src/: LoadShaders.cpp  LoadTextures.cpp  Prime-A.cpp  Prime-B.cpp  Prime-C.cpp  Prime-D.cpp  Prime-E.cpp  Prime-F.cpp
AO/Network/: CMakeLists.txt  NetDemo.cpp  tcpClient.cpp  tcpServer.cpp
AO/Offhand/: CMakeLists.txt
AO/Offhand/dev/: TickTock.cpp
AO/Offhand/network/: NetDemo.cpp  Timers.cpp
AO/Scene360/: CMakeLists.txt
AO/Scene360/shaders/: Viewer3D.frag  Viewer3D.vert
AO/Scene360/src/: LoadShaders.cpp  (+2 more)
AO/Triangles_Basis/: Basis.cpp  CMakeLists.txt  LoadShaders.cpp  LoadShaders.h
Core/: CMakeLists.txt
Core/cmake/: GDrive.cmake
Core/demos/: AnyShapes.cpp  CollisionTest.cpp  ConwaysGOL.cpp  Hexes.cpp  Hills.cpp  MidPoints.cpp  RenderMath.cpp  RenderMath.cpp.autosave  Ripples.cpp
Core/geometry/: GL4_BumpGrid.cpp  GL4_CellGrid.cpp  GL4_DataSet.cpp  GL4_Grid.cpp  GL4_HexGrid.cpp  GL4_PointGrid.cpp  GL4_PolyFunc.cpp  GL4_RigidPath.cpp  GL4_Sphere.cpp
Core/include/: Feeds.h  Geometry.h  Geometry.hpp  Loaders.h  ManualSets.h  Pipeline.h  Scene.h
Core/loaders/: FileIO.cpp  LoadShaders.cpp  LoadTextures.cpp
Core/main/: AnyShapes.cpp  BevelGround.cpp  Blank.cpp  CalcGraph.cpp  CollisionTest.cpp  Conway.cpp  ConwaysGOL.cpp  ConwaysHex.cpp  ConwaysProblem.cpp  Demo_BasicImg.cpp  Demo_BasicUI.cpp  Demo_CalcGraph.cpp  Demo_Cellular.cpp  Demo_Cloning.cpp  Demo_Editor.cpp  Demo_Galactica.cpp  Demo_IdxCube.cpp  Demo_Modeling.cpp  Demo_Quasi.cpp  Demo_Rounding.cpp  Demo_Spectrum.cpp  Demo_Tiles.cpp  DropCollision.cpp  Galactica.cpp  Hexes.cpp  Hills.cpp  IdxCube.cpp  LoopTimed.cpp  MandlebrotSet.cpp  MidPoints.cpp  Quasi.cpp  RenderMath.cpp  Ripples.cpp  Rounding.cpp  Spectrum.cpp  StackedGOL.cpp  StackedRipples.cpp
Core/pipeline/: GLSL_Fractals.cpp  GLSL_HeightRange.cpp  GLSL_Idle.cpp  GLSL_StateStream.cpp  GLSL_Waves.cpp
Core/scene/: CellSim.cpp  PlaneCollision.cpp
Core/shaders/: ColorMe.vert  Flatland.vert  Fractals.frag  HeightRange.frag  Idle.frag  Idle.vert  StateStream.frag  StateStream.vert  Tilemap.frag  Tilemap.vert  Tones.vert  Waves.frag  Waves.vert
Core/v1.0/: CMakeLists.txt
Core/v2.0/: CMakeLists.txt
Core/v2.1/: CMakeLists.txt
Core/v2.2/: CMakeLists.txt
Core/v3.0/: CMakeLists.txt  GL4_Api.hpp  SingletonTest.cpp
Core/v3.1/: CMakeLists.txt
Core/v3.2/: CMakeLists.txt
Core/v4.0/: CMakeLists.txt
Core/v4.1/: CMakeLists.txt
Extlib/: CMakeLists.txt
Extlib/cmake/: GDrive.cmake  GDrive.cmake.in
Extlib/img2ktx-master/: CMakeLists.txt  README.md  img2ktx.cpp
Extlib/pico-pixel-client-sdk-master/: CMakeLists.txt  PicoPixelClientConfig.cmake
Extlib/sqlite-amalgamation-3180000/: CMakeLists.txt  SQLiteConfig.cmake
(+391 files in other folders)
